docs/api/qiskit/0.30/qiskit.providers.aer.extensions.Snapshot.mdx
---
title: Snapshot (v0.30)
description: API reference for qiskit.providers.aer.extensions.Snapshot in qiskit v0.30
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.aer.extensions.Snapshot
---

# Snapshot

<Class id="qiskit.providers.aer.extensions.Snapshot" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-aer/tree/stable/0.9/qiskit/providers/aer/extensions/snapshot.py" signature="Snapshot(label, snapshot_type='statevector', num_qubits=0, num_clbits=0, params=None)" modifiers="class">
  Bases: `qiskit.circuit.instruction.Instruction`

  Simulator snapshot instruction.

  Create new snapshot instruction.

  **Parameters**

  *   **label** (*str*) – the snapshot label for result data.
  *   **snapshot\_type** (*str*) – the type of the snapshot.
  *   **num\_qubits** (*int*) – the number of qubits for the snapshot type \[Default: 0].
  *   **num\_clbits** (*int*) – the number of classical bits for the snapshot type \[Default: 0].
  *   **params** (*list or None*) – the parameters for snapshot\_type \[Default: None].

  **Raises**

  **ExtensionError** – if snapshot label is invalid.

  <Admonition title="Deprecated since version 0.9.0" type="danger">
    This instruction has been deprecated and will be removed no earlier than 3 months from the 0.9.0 release date. It has been superseded by the save instructions in [`qiskit.providers.aer.library`](aer_library#module-qiskit.providers.aer.library "qiskit.providers.aer.library") module.
  </Admonition>

  ## Methods

  <span id="qiskit-providers-aer-extensions-snapshot-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.providers.aer.extensions.Snapshot.add_decomposition" signature="Snapshot.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="qiskit-providers-aer-extensions-snapshot-assemble" />

  ### assemble

  <Function id="qiskit.providers.aer.extensions.Snapshot.assemble" signature="Snapshot.assemble()">
    Assemble a QasmQobjInstruction
  </Function>

  <span id="qiskit-providers-aer-extensions-snapshot-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.providers.aer.extensions.Snapshot.broadcast_arguments" signature="Snapshot.broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="qiskit-providers-aer-extensions-snapshot-c-if" />

  ### c\_if

  <Function id="qiskit.providers.aer.extensions.Snapshot.c_if" signature="Snapshot.c_if(classical, val)">
    Add classical condition on register or cbit classical and value val.
  </Function>

  <span id="qiskit-providers-aer-extensions-snapshot-copy" />

  ### copy

  <Function id="qiskit.providers.aer.extensions.Snapshot.copy" signature="Snapshot.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-providers-aer-extensions-snapshot-define-snapshot-register" />

  ### define\_snapshot\_register

  <Function id="qiskit.providers.aer.extensions.Snapshot.define_snapshot_register" signature="Snapshot.define_snapshot_register(circuit, label=None, qubits=None)" modifiers="static">
    Defines qubits to snapshot for all snapshot methods
  </Function>

  <span id="qiskit-providers-aer-extensions-snapshot-inverse" />

  ### inverse

  <Function id="qiskit.providers.aer.extensions.Snapshot.inverse" signature="Snapshot.inverse()">
    Special case. Return self.
  </Function>

  <span id="qiskit-providers-aer-extensions-snapshot-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.providers.aer.extensions.Snapshot.is_parameterized" signature="Snapshot.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="qiskit-providers-aer-extensions-snapshot-mirror" />

  ### mirror

  <Function id="qiskit.providers.aer.extensions.Snapshot.mirror" signature="Snapshot.mirror()">
    DEPRECATED: use instruction.reverse\_ops().

    **Returns**

    **a new instruction with sub-instructions**

    reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-providers-aer-extensions-snapshot-qasm" />

  ### qasm

  <Function id="qiskit.providers.aer.extensions.Snapshot.qasm" signature="Snapshot.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="qiskit-providers-aer-extensions-snapshot-repeat" />

  ### repeat

  <Function id="qiskit.providers.aer.extensions.Snapshot.repeat" signature="Snapshot.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="qiskit-providers-aer-extensions-snapshot-reverse-ops" />

  ### reverse\_ops

  <Function id="qiskit.providers.aer.extensions.Snapshot.reverse_ops" signature="Snapshot.reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-providers-aer-extensions-snapshot-soft-compare" />

  ### soft\_compare

  <Function id="qiskit.providers.aer.extensions.Snapshot.soft_compare" signature="Snapshot.soft_compare(other)">
    Soft comparison between gates. Their names, number of qubits, and classical bit numbers must match. The number of parameters must match. Each parameter is compared. If one is a ParameterExpression then it is not taken into account.

    **Parameters**

    **other** (*instruction*) – other instruction.

    **Returns**

    are self and other equal up to parameter expressions.

    **Return type**

    bool
  </Function>

  <span id="qiskit-providers-aer-extensions-snapshot-validate-parameter" />

  ### validate\_parameter

  <Function id="qiskit.providers.aer.extensions.Snapshot.validate_parameter" signature="Snapshot.validate_parameter(parameter)">
    Instruction parameters has no validation or normalization.
  </Function>

  ## Attributes

  ### decompositions

  <Attribute id="qiskit.providers.aer.extensions.Snapshot.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.providers.aer.extensions.Snapshot.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.providers.aer.extensions.Snapshot.duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.providers.aer.extensions.Snapshot.label">
    Return snapshot label
  </Attribute>

  ### params

  <Attribute id="qiskit.providers.aer.extensions.Snapshot.params">
    return instruction params.
  </Attribute>

  ### snapshot\_type

  <Attribute id="qiskit.providers.aer.extensions.Snapshot.snapshot_type">
    Return snapshot type
  </Attribute>

  ### unit

  <Attribute id="qiskit.providers.aer.extensions.Snapshot.unit">
    Get the time unit of duration.
  </Attribute>
</Class>

